--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Responsive Portfolio Website",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive --usePolling --polling-interval 1000"  
+    "sass": "node-sass -w scss/ -o dist/include/css/ --recursive --usePolling --polling-interval 1000"  
   },
   "author": "Toby Chow",
   "license": "MIT",
